# Business_Process_Optimization

./: README.md
docker/: Dockerfile  README.md  docker-compose_bpo.yaml  ros_entrypoint.sh
docs/: BPO_Documentation.md  README.md
src/maptogridmap/: CMakeLists.txt  package.xml
src/maptogridmap/msg/: Annotations.msg  Edge.msg  Graph.msg  Gridmap.msg  GridmapCell.msg  Vertex.msg
src/opil_bpo/: CMakeLists.txt  package.xml  setup.py
src/opil_bpo/Settings/: CUTLab_850_1025.yaml  cut_annotations.ini
src/opil_bpo/include/: Graph.h  PQi.h  SPT.h
src/opil_bpo/launch/: bpo_service_v5.launch
src/opil_bpo/msg/: AoI.msg  Edges.msg  Nodes.msg  PathDist.msg  Results.msg
src/opil_bpo/scripts/: Dijkstra.py  SGraphPNodesEdges.py  adjust_new_constraints.py  create_states_fun.py  taskplannerfuns12.py  tp_runservice_v5.py
src/opil_bpo/src/: parser_v1.cpp  pathdist_v2.cpp
src/opil_bpo/srv/: shpath.srv  taskplanner_req.srv  tppath.srv
test/: bpospec2ocb.sh  bpospecif.json  bpospecif2.json
